header finished, navbar z-index issues solved

--- a/src/sections/header/header.scss
+++ b/src/sections/header/header.scss
@@ -77,8 +77,8 @@
             height: 900px;
             -o-object-fit: contain;
             object-fit: contain;
-            -o-object-position: right;
-            object-position: right;
+            -o-object-position: right bottom;
+            object-position: right bottom;
             @media only screen and (max-width: 1300px){
                 max-width: 1227px;
                 width: 70%;
