--- a/src/sections/navbar/navbar.scss
+++ b/src/sections/navbar/navbar.scss
@@ -38,10 +38,11 @@ $item-height: 25px;
             position: fixed;
             top: 0;
             left: 0;
+            z-index: 100;
         }
         ul {
             position: relative;
-            z-index: 10;
+            z-index: 100;
         }
     };
 }
